fixing cards gaps issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,14 +1,8 @@
 
 body {
     background-image: url("refresh.jpg");
-<<<<<<< HEAD
-    background-repeat: no-repeat;
     background-size: 2000px;
     
-=======
-    background-attachment: fixed;
-    background-size: cover;
->>>>>>> f9804b587276c51d4ec29d37253ec1f465fa72ae
 }
 
 .margin-top{
@@ -26,7 +20,6 @@ margin-top: 100px;
     font-weight: 600;
 }
 .noPicTitle {
-    color: white;
     font-size:25px;
     font-weight: 600;
 }
@@ -36,8 +29,25 @@ margin-top: 100px;
     font-size: 17px;
     font-style: italic;
 }
-.card{ 
-    /* height: 40%;  */
+.card:hover { 
+    border: 4px solid black;
 }
 
+#results {
+    width: 1200px;
+    margin: 20px auto;
+    columns: 4;
+    column-gap: 40px;
+}
 
+#results .card {
+    width: 100%;
+    margin: 0 0 20px;
+    padding: 10px;
+    overflow: hidden;
+    break-inside: avoid;
+}
+
+#results .card img {
+    max-width: 100%;
+}
